--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,6 +89,7 @@
     };
 
     $(document).ready(function(){
+
         $('.thumbnail').click(function(){
             var title = $(this).find('h4').text().trim();
             var image = $(this).children('img').attr('src');
@@ -108,6 +109,29 @@
                     icon: image
                 });
             });
+        });
+
+       $('.btn-kill').click(function(event){
+            var _id = event.target.id;
+            console.log("kill! id= ",_id);
+            // $.ajax({
+            //     url: '/killSighting',
+            //     method: "POST",
+            //     data: {_id: _id},
+            // }).done(function(killed){
+            //     console.log(killed);
+                 // if (killed.killed) then $("#_id").remove();
+                // else Alert ("Couldn't kill the bird!");
+
+                // var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
+                // var image = {url: sighting.birdImage, scaledSize: new google.maps.Size(20, 20)}
+                // var marker = new google.maps.Marker({
+                //     map: map,
+                //     position: latlng,
+                //     title: sighting.birdName,
+                //     icon: image
+                // });
+            // });
 
         });
     });
