--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
             <h3>My List of Birds</h3>
 <!-- Start of user's birds. -->
             <div id="userBirdList" class="col-md-4">
-            <%for(var x=0;x<userBirds.length;x++){%>
+            <%for(var x=userBirds.length-1; x>=0;x--){%>
               <% var bird= userBirds[x] %>
               <% include ./partials/userBird %>
             <% } %>
@@ -70,7 +70,7 @@
 <% if(locals.user){ %>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTx6HnaOWxCy2LitrHA0qX1oSkwwUFcpg&signed_in=true&callback=initMap" async defer></script>
 <script>
-// google maps does not like to be inside of document ready function!!
+    // google maps does not like to be inside of document ready function!!
     function initMap(){
         map = new google.maps.Map(document.getElementById('map'), {
             zoom: 4,
@@ -92,47 +92,7 @@
 
     $(document).ready(function(){
 
-        $('.btn-add').click(function(){
-
-            var title = $(this).parent().prev().text().trim();
-            var image = $(this).parent().parent().prev('img').attr('src');
-            var location = $(".locationText").val();
-
-            $.ajax({
-                url: '/newSighting',
-                method: "POST",
-                data: {title: title, birdImage: image, location: location},
-            }).done(function(sighting){
-                console.log(sighting);
-                $("#userBirdList").prepend(sighting.html);
-                console.log(sighting._id);
-                buttonKillHandeler('#'+sighting._id);
-                var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
-                var image = {url: sighting.birdImage, scaledSize: new google.maps.Size(20, 20)};
-                var marker = new google.maps.Marker({
-                    map: map,
-                    position: latlng,
-                    title: sighting.birdName,
-                    icon: image
-                });
-            });
-        });
-
-
-        // $('.btn-kill').click(function(event){
-        //     var id = event.target.id;
-        //     $.ajax({
-        //         url: '/killSighting',
-        //         method: "POST",
-        //         data: {id:id},
-        //     }).done(function(){
-        //         var classId = "."+id;
-        //        $(classId).remove();
-        //         // else Alert ("Couldn't kill the bird!");
-        //     });
-        // });
-
-        function buttonKillHandeler (selector){
+        function addButtonKillHandeler (selector){
             $(selector).click(function(event){
                 var id = event.target.id;
                 $.ajax({
@@ -147,7 +107,31 @@
             });
         };
 
-        buttonKillHandeler('.btn-kill');
+        $('.btn-add').click(function(){
+            var title = $(this).parent().prev().text().trim();
+            var image = $(this).parent().parent().prev('img').attr('src');
+            var location = $(".locationText").val();
+            $.ajax({
+                url: '/newSighting',
+                method: "POST",
+                data: {title: title, birdImage: image, location: location},
+            }).done(function(sighting){
+                console.log(sighting);
+                $("#userBirdList").prepend(sighting.html);
+                addButtonKillHandeler('#'+ sighting._id);
+                var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
+                var image = {url: sighting.birdImage, scaledSize: new google.maps.Size(20, 20)};
+                var marker = new google.maps.Marker({
+                    map: map,
+                    position: latlng,
+                    title: sighting.birdName,
+                    icon: image
+                });
+            });
+        });
+
+        addButtonKillHandeler('.btn-kill');
+
     });
 </script>
 <% }; %>
