--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,12 +44,12 @@
                         <div class="row">
                         <%for(var i=0;i<birds.length;i++){%>
                             <div class="col-xs-6 col-md-4">
-                                <div class="thumbnail" data-birdId= <%= birds[i]._id %>>
+                                <div class="thumbnail">
                                     <img class="thumbnailImage" src="<%= birds[i].images[0].url %>">
                                     <div class="caption">
                                         <h4><%= birds[i].name %></h4>
                                         <div class="btn-group btn-group-xs" role="group" aria-label="...">
-                                            <button type="button" class="btn-add btn btn-default btn-left"> ADD </button>
+                                            <button type="button" class="btn-add btn btn-default btn-left" data-birdId="<%= birds[i]._id %>"> ADD </button>
                                             <button type="button" class="btn btn-default btn-right">ALT VIEW</button>
                                         </div>
                                     </div>
@@ -101,7 +101,7 @@
                     data: {id:id},
                 }).done(function(){
                     var classId = "."+id;
-                   $(classId).remove();
+                    $(classId).remove();
                     // else Alert ("Couldn't kill the bird!");
                 });
             });
@@ -110,11 +110,17 @@
         $('.btn-add').click(function(){
             var title = $(this).parent().prev().text().trim();
             var image = $(this).parent().parent().prev('img').attr('src');
+            var birdId = $(this).attr("data-birdId");
             var location = $(".locationText").val();
             $.ajax({
                 url: '/newSighting',
                 method: "POST",
-                data: {title: title, birdImage: image, location: location},
+                data: {
+                    birdId: birdId,
+                    title: title,
+                    birdImage: image,
+                    location: location
+                },
             }).done(function(sighting){
                 console.log(sighting);
                 $("#userBirdList").prepend(sighting.html);
