--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,7 +122,7 @@
                     location: location
                 },
             }).done(function(sighting){
-                console.log(sighting);
+                console.log("sighting", sighting);
                 $("#userBirdList").prepend(sighting.html);
                 addButtonKillHandeler('#'+ sighting._id);
                 var latlng = new google.maps.LatLng(sighting.lat, sighting.lng);
