changed var bird to var sighting to make map.ejs easer to read

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
 <!-- Start of user's birds. -->
             <div id="userBirdList" class="col-md-4">
             <%for(var x=userBirds.length-1; x>=0;x--){%>
-              <% var bird= userBirds[x] %>
+              <% var sighting= userBirds[x] %>
               <% include ./partials/userBird %>
             <% } %>
             </div>
