--- a/views/map.ejs
+++ b/views/map.ejs
@@ -1,5 +1,7 @@
+<!-- This is dead code. Needs to be purged from project. -->
+
 <% include ./partials/header %>
-  
+
   <script>
     function initMap() {
       var map = new google.maps.Map(document.getElementById('map'), {
@@ -36,6 +38,6 @@
   </div>
   <div id="map"></div>
 
-  
+
 
 <% include ./partials/footer %>
