--- a/views/partials/userBird.ejs
+++ b/views/partials/userBird.ejs
@@ -1,13 +1,13 @@
 <div class="sighting">
 		<div class="birdName">
-		  <%= bird.birdName %>
+		  <%= sighting.birdName %>
 		</div>
 		<div class="birdImage">
-				<img width="158" height="150" class="thumbnailImage" src="<%= bird.birdImage %>">
+				<img width="158" height="150" class="thumbnailImage" src="<%= sighting.birdImage %>">
 		</div>
 		<div class="caption">
 		    <div class="btn-group btn-group-xs" >
-		        <button type="button" class="btn-kill btn btn-default btn-left" id="<%=bird._id%>"> REMOVE </button>
+		        <button type="button" class="btn-kill btn btn-default btn-left" id="<%=sighting._id%>"> REMOVE </button>
 		        <button type="button" class="btn btn-default btn-right">ALT VIEW</button>
 		    </div>
 		</div>
