implemented alt-view button function for add bird

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,12 +45,14 @@
                         <%for(var i=0;i<birds.length;i++){%>
                             <div class="col-xs-6 col-md-4">
                                 <div class="thumbnail">
-                                    <img class="thumbnailImage" src="<%= birds[i].images[0].url %>">
+                                    <% var imageUrls = '['+'"'+birds[i].images[0].url+'"'%>;
+                                    <%for (var j=1;j<birds[i].images.length;j++){imageUrls += (',"'+birds[i].images[j].url+'"')} imageUrls += ']' %>
+                                    <img class="thumbnailImage" src="<%= birds[i].images[0].url %>" data-index='0' data-imageurls='<%= imageUrls %>'>
                                     <div class="caption">
                                         <h4><%= birds[i].name %></h4>
                                         <div class="btn-group btn-group-xs" role="group" aria-label="...">
                                             <button type="button" class="btn-add btn btn-default btn-left" data-birdId="<%= birds[i]._id %>"> ADD </button>
-                                            <button type="button" class="btn btn-default btn-right">ALT VIEW</button>
+                                            <button type="button" class="btn-altImg btn btn-default btn-right">ALT VIEW</button>
                                         </div>
                                     </div>
                                 </div>
@@ -72,6 +74,7 @@
 <script>
     // google maps does not like to be inside of document ready function!!
     var markers = {};
+    var birds = <%- JSON.stringify(birds) %>;
     function initMap(){
         map = new google.maps.Map(document.getElementById('map'), {
             zoom: 4,
@@ -144,9 +147,23 @@
             });
         });
 
+        $('.btn-altImg').click(function(){
+            var targetImg = $(event.target).closest(".thumbnail").find('.thumbnailImage');
+            var imageUrls = targetImg.data('imageurls');
+            var idx = targetImg.data('index');
+            if (++idx==imageUrls.length) idx=0;
+            targetImg.data('index',idx);
+            targetImg.attr('src',imageUrls[idx]);
+        });
+
         addButtonKillHandeler('.btn-kill');
 
     });
 </script>
 <% }; %>
 <% include ./partials/footer %>
+
+
+imageUrls='[&quot;
+http://1.bp.blogspot.com/_kBNnyETKMIk/Sjb_ekKunZI/AAAAAAAABrQ/LD2LfNinykE/s400/donald-duck-head.jpg&quot;,
+http://vignette3.wikia.nocookie.net/disney/images/9/92/Donald_Duck_757.jpg/revision/latest?cb=20131102201426&quot;]'
