--- a/views/partials/userBird.ejs
+++ b/views/partials/userBird.ejs
@@ -1,4 +1,4 @@
-<div class="sighting">
+<div class="sighting imageParent">
 		<div class="birdName">
 		  <%= sighting.birdName %>
 		</div>
@@ -8,7 +8,7 @@
 		<div class="caption">
 		    <div class="btn-group btn-group-xs" >
 		        <button type="button" class="btn-kill btn btn-default btn-left" id="<%=sighting._id%>"> REMOVE </button>
-		        <button type="button" class="btn btn-default btn-right">ALT VIEW</button>
+		        <button type="button" class="btn btn-altImg btn-default btn-right" data-id="<%=sighting._id%>">ALT VIEW</button>
 		    </div>
 		</div>
 		<br>
