--- a/views/partials/userBird.ejs
+++ b/views/partials/userBird.ejs
@@ -3,7 +3,7 @@
 		  <%= sighting.birdName %>
 		</div>
 		<div class="birdImage">
-				<img width="158" height="150" class="thumbnailImage" src="<%= sighting.birdImage %>">
+				<img width="158" height="150" class="thumbnailImage" src="<%= sighting.birdImages[0].url %>">
 		</div>
 		<div class="caption">
 		    <div class="btn-group btn-group-xs" >
