--- a/views/partials/userBird.ejs
+++ b/views/partials/userBird.ejs
@@ -3,7 +3,9 @@
 		  <%= sighting.birdName %>
 		</div>
 		<div class="birdImage">
-				<img width="158" height="150" class="thumbnailImage" src="<%= sighting.birdImages[0].url %>">
+				<% var imageUrls = '['+'"'+sighting.birdImages[0].url+'"'%>;
+				<%for (var j=1;j<sighting.birdImages.length;j++){imageUrls += (',"'+sighting.birdImages[j].url+'"')} imageUrls += ']' %>
+				<img width="158" height="150" class="thumbnailImage" src="<%= sighting.birdImages[0].url %>" data-index='0' data-imageurls='<%= imageUrls %>'/>
 		</div>
 		<div class="caption">
 		    <div class="btn-group btn-group-xs" >
