setup for production, bin/www reset to port 80, main.js contains db logon hardwired, views/index.ejs removed errant ';', package.json script set to 'producion'.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
                         <%for(var i=0;i<birds.length;i++){%>
                             <div class="col-xs-6 col-md-4">
                                 <div class="thumbnail imageParent">
-                                    <% var imageUrls = '['+'"'+birds[i].images[0].url+'"'%>;
+                                    <% var imageUrls = '['+'"'+birds[i].images[0].url+'"'%>
                                     <%for (var j=1;j<birds[i].images.length;j++){imageUrls += (',"'+birds[i].images[j].url+'"')} imageUrls += ']' %>
                                     <img class="thumbnailImage" src="<%= birds[i].images[0].url %>" data-index='0' data-imageurls='<%= imageUrls %>'/>
                                     <div class="caption">
